--- a/index.html
+++ b/index.html
@@ -31,13 +31,51 @@
             <img src="images/logo.svg" alt="logo">
           </div>
           <div class="navbar__contact">
-            <a href="tel:+201000000000">
+            <a href="tel:12345">
               <i class="fa-solid fa-phone"></i>
-              <span>+201000000000</span>
+              <span>12345</span>
             </a>
           </div>
         </div>
       </div>
+    </div>
+    <div class="hero">
+      <div class="hero__overlay">
+        <div class="">
+          <h1>Montenapoleone</h1>
+          <h2>Beauty speaks Italian!</h2>
+        </div>
+      </div>
+        <div class="hero-swiper">
+          <div class="swiper-wrapper">
+            <div class="swiper-slide">
+              <div class="hero-swiper-slide">
+                <img src="images/3Zs5uOLAY6I5G1pglQSyv8uzPRatuwTKn0VprPOh.webp" alt="hero-logo">
+              </div>
+            </div>
+            <div class="swiper-slide">
+              <div class="hero-swiper-slide"  >
+                <img src="images/8UCnvXLpwFqyPSKWwW5sd8RmhDEUhgOnyGHGGniq.webp" alt="hero-logo">
+              </div>
+            </div>
+            <div class="swiper-slide">
+              <div class="hero-swiper-slide">
+                <img src="images/ZUE9P6oeRKGwYeldEB6Jzmigj7hF3s8JcGq6B1CC.webp" alt="hero-logo">
+              </div>
+            </div>
+            <div class="swiper-slide">
+              <div class="hero-swiper-slide">
+                <img src="images/hBYccXCkOYRyxkPpsnT207xXrq6MzlFbMMx86ggz.webp" alt="hero-logo">
+              </div>
+            </div>
+          </div>
+          <div class="hero-swiper-button-next">
+            <img src="images/3Zs5uOLAY6I5G1pglQSyv8uzPRatuwTKn0VprPOh.webp" alt="hero-logo">
+          </div>
+          <div class="hero-swiper-button-prev">
+            <img src="images/3Zs5uOLAY6I5G1pglQSyv8uzPRatuwTKn0VprPOh.webp" alt="hero-logo">
+          </div>
+        </div>
     </div>
     <section class="navigated-sections" id="navigated-sections">
       <div class="navigated-sections__nav">
