--- a/index.html
+++ b/index.html
@@ -30,11 +30,17 @@
           <div class="navbar__logo">
             <img src="images/logo.svg" alt="logo">
           </div>
-          <div class="navbar__contact">
-            <a href="tel:12345">
-              <i class="fa-solid fa-phone"></i>
-              <span>12345</span>
-            </a>
+          <div class="navbar__right">
+            <div class="navbar__lang">
+              <button class="lang-btn active" data-lang="en">EN</button>
+              <button class="lang-btn" data-lang="ar">AR</button>
+            </div>
+            <div class="navbar__contact">
+              <a href="tel:12345">
+                <i class="fa-solid fa-phone"></i>
+                <span>12345</span>
+              </a>
+            </div>
           </div>
         </div>
       </div>
@@ -87,35 +93,29 @@
         </button>
         <button
           class="navigated-sections__nav-button"
-          data-target="project-materials"
+          data-target="projectMaterials"
         >
           <span>project materials</span>
         </button>
         <button
           class="navigated-sections__nav-button"
-          data-target="project-interiors"
+          data-target="projectInteriors"
         >
           <span>interiors and exteriors</span>
         </button>
-        <button class="navigated-sections__nav-button" data-target="project-amenities">
+        <button class="navigated-sections__nav-button" data-target="projectAmenities">
           <span>amenities</span>
         </button>
-        <button class="navigated-sections__nav-button" data-target="tab">
+        <button class="navigated-sections__nav-button" data-target="unitTypes">
           <span>unit types</span>
         </button>
-        <!-- <button
-          class="navigated-sections__nav-button"
-          data-target="virtual-tours"
-        >
-          <span>virtual tours</span>
-        </button> -->
         <button
           class="navigated-sections__nav-button"
-          data-target="project-vedio"
+          data-target="projectUpdates"
         >
           <span>project updates</span>
         </button>
-        <button class="navigated-sections__nav-button" data-target="contact">
+        <button class="navigated-sections__nav-button" data-target="register">
           <span>register</span>
         </button>
       </div>
@@ -377,7 +377,7 @@
             </div>
           </div>
         </section>
-        <section class="navigated-sections__section navigated-sections__section--project-materials">
+        <section class="navigated-sections__section navigated-sections__section--projectMaterials navigated-sections__section--project-materials">
           <div class="container">
             <h2>Project Materials</h2>
             <div class="card-Amenities">
@@ -424,7 +424,7 @@
             </div>
           </div>
         </section>
-        <section class="navigated-sections__section navigated-sections__section--project-interiors">
+        <section class="navigated-sections__section navigated-sections__section--projectInteriors navigated-sections__section--project-interiors">
           <div class="container">
             <div class="row">
               <div class="col-md-6">
@@ -482,20 +482,20 @@
                 </div>
                 <div class="project-interiors__content">
                   <h2>Exteriors</h3>
-                  <p>Montenapoleone compound embodies elegance with sleek Italian design, modern facades, and warm earth tones. The architecture seamlessly integrates lush greenery and open spaces, creating a tranquil environment. The framed elevations add a unique aesthetic charm through a harmonious balance of mass and void.</p>
-                  <h3>Each building features three sections:</h3>
+                  <p class="text_ar_p_exteriors">Montenapoleone compound embodies elegance with sleek Italian design, modern facades, and warm earth tones. The architecture seamlessly integrates lush greenery and open spaces, creating a tranquil environment. The framed elevations add a unique aesthetic charm through a harmonious balance of mass and void.</p>
+                  <h3 class="text_ar_h3_exteriors">Each building features three sections:</h3>
                   <ul>
                     <li>
-                      <p>Basement</p>
+                      <p class="text_ar_p_exteriors">Basement</p>
                     </li>
                     <li>
-                      <p>Typical Floor</p>
+                      <p class="text_ar_p_exteriors">Typical Floor</p>
                     </li>
                     <li>
-                      <p>Cap/Roof with a Rooftop Pool</p>
+                      <p class="text_ar_p_exteriors">Cap/Roof with a Rooftop Pool</p>
                     </li>
                   </ul>
-                  <p>Premium facades with double-glazed glass invite natural light and fresh air, blending nature with modern living. Every detail is crafted to deliver practical, high-quality lifestyles</p>
+                  <p class="text_ar_p_exteriors">Premium facades with double-glazed glass invite natural light and fresh air, blending nature with modern living. Every detail is crafted to deliver practical, high-quality lifestyles</p>
                 </div>
               </div>
               <div class="col-md-6">
@@ -553,23 +553,23 @@
                 </div>
                 <div class="project-interiors__content">
                   <h2>Interiors</h3>
-                  <p>Montenapoleone compound embodies elegance with sleek Italian design, modern facades, and warm earth tones. The architecture seamlessly integrates lush greenery and open spaces, creating a tranquil environment. The framed elevations add a unique aesthetic charm through a harmonious balance of mass and void.</p>
-                  <h3>Key features include:</h3>
+                  <p class="text_ar_p_interiors">Montenapoleone compound embodies elegance with sleek Italian design, modern facades, and warm earth tones. The architecture seamlessly integrates lush greenery and open spaces, creating a tranquil environment. The framed elevations add a unique aesthetic charm through a harmonious balance of mass and void.</p>
+                  <h3 class="text_ar_h3_interiors">Key features include:</h3>
                   <ul>
                     <li>
-                      <p>Kitchens: <span>Fully equipped with elegant cabinetry and scratch-resistant countertops, combining sleek design with durability to meet both style and practicality needs.</span></p>
+                      <p><strong class="text_ar_strong_interiors">Kitchens:</strong> <span class="text_ar_p_interiors">Fully equipped with elegant cabinetry and scratch-resistant countertops, combining sleek design with durability to meet both style and practicality needs.</span></p>
                     </li>
                     <li>
-                      <p>Bathrooms: <span>Luxuriously finished with premium tiles, bathtubs, and showers, offering a relaxing and refined experience.</span></p>
+                      <p><strong class="text_ar_strong_interiors">Bathrooms:</strong> <span class="text_ar_p_interiors">Luxuriously finished with premium tiles, bathtubs, and showers, offering a relaxing and refined experience.</span></p>
                     </li>
                   </ul>
-                  <p>Whether designed for families or individuals, every corner of Montenapoleone reflects a commitment to comfort and sophistication, making it the ideal choice for those seeking a home that embodies both beauty and functionality.</p>
+                  <p class="text_ar_p_interiors">Whether designed for families or individuals, every corner of Montenapoleone reflects a commitment to comfort and sophistication, making it the ideal choice for those seeking a home that embodies both beauty and functionality.</p>
                 </div>
               </div>
             </div>
           </div>
         </section>
-        <div class="">
+        <div class="" dir="ltr">
           <div class="logoMarqueeSection">
               <div class="container" id="logoMarqueeSection">
                 <div class="default-content-container flex items-center">
@@ -599,7 +599,7 @@
               </div>
           </div>
         </div>
-        <section class="navigated-sections__section navigated-sections__section--project-amenities">
+        <section class="navigated-sections__section navigated-sections__section--projectAmenities navigated-sections__section--project-amenities">
           <div class="container">
             <h2>Amenities</h2>
             <div class="card-Amenities">
@@ -654,7 +654,7 @@
             </div>
           </div>
         </section>
-        <section class="navigated-sections__section navigated-sections__section--tab">
+        <section class="navigated-sections__section navigated-sections__section--unitTypes navigated-sections__section--tab">
           <div class="container">
             <div class="row">
 
@@ -890,7 +890,7 @@
             </div>
           </div>
         </section>
-        <section class="navigated-sections__section navigated-sections__section--project-vedio">
+        <section class="navigated-sections__section navigated-sections__section--projectUpdates navigated-sections__section--project-vedio">
           <div class="container">
             <div class="row">
               <div class="col-md-6">
@@ -904,7 +904,7 @@
               </div>
               <div class="col-md-6 mt-5">
                 <div class="navigated-sections__section-content navigated-sections__section-content--project-materials">
-                  <h2>Construction Update</h2>
+                  <h2 class="text_ar_2">Construction Update</h2>
                   <div class="construction-update-slider">
                     <div class="swiper">
                       <div class="swiper-wrapper">
@@ -929,7 +929,7 @@
             </div>
           </div>
         </section>
-        <section class="navigated-sections__section navigated-sections__section--contact">
+        <section class="navigated-sections__section navigated-sections__section--register navigated-sections__section--contact">
           <div class="navigated-sections__contact-info">
             <h2>Ready for a new living <span>Experience?</span></h2>
             <p>Register your interest now for more information</p>
@@ -939,7 +939,7 @@
               <div class="row">
                 <div class="col-md-12">
                   <div class="form-group">
-                    <input type="text" placeholder="Full Name" />
+                    <input type="text" placeholder="Name" />
                   </div>
                 </div>
                 <div class="col-md-12">
@@ -992,7 +992,7 @@
                 <div class="col-md-12">
                   <div class="form-group-checkbox">
                     <input type="checkbox" name="" id="" />
-                    <label for="">By using this form, you accept the <a href="#">Website Cookies</a> and <a href="#">Privacy Policy</a></label>
+                    <label for="">By using this form, you accept the <a href="#">Website Cookies</a> <span>and</span> <a href="#">Privacy Policy</a></label>
                   </div>
                 </div>
               </div>
