--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           <div class="navbar__right">
             <div class="navbar__lang">
               <button class="lang-btn active" data-lang="en">EN</button>
-              <button class="lang-btn" data-lang="ar">AR</button>
+              <button class="lang-btn" data-lang="ar">العربية</button>
             </div>
             <div class="navbar__contact">
               <a href="tel:12345">
