--- a/index.html
+++ b/index.html
@@ -32,8 +32,7 @@
           </div>
           <div class="navbar__right">
             <div class="navbar__lang">
-              <button class="lang-btn active" data-lang="en">EN</button>
-              <button class="lang-btn" data-lang="ar">العربية</button>
+              <button class="lang-btn lang" onclick="toggleLanguage()">العربية</button>
             </div>
             <div class="navbar__contact">
               <a href="tel:12345">
@@ -1072,6 +1071,7 @@
     </div>
 
 
+    <script src="js/lang.js"></script>
     <script src="js/web.js"></script>
     
   </body>
